--- a/nairobi/index.html
+++ b/nairobi/index.html
@@ -72,7 +72,7 @@
 
         <h1>Nairobi CSS</h1>
 
-<h4>Nairobi CSS is a framework for building responsive, mobile-friendly, multilingual literacy websites. This demo site has stories in English and Spanish, as well as several other <a href="/nairobi/about/languages">languages</a>. Enjoy!</h4>
+<h4>Nairobi CSS is a framework for building responsive, mobile-friendly, multilingual literacy websites. This demo site has stories in English and Spanish, as well as several other <a href="/nairobi/about/languages">languages</a>. Source code is available <a href="https://github.com/global-asp/nairobi-css">on GitHub</a>. Enjoy!</h4>
 
 <div class="container">
   <div class="columns">
