--- a/stories/nb/0003_skoleklær_slides.html
+++ b/stories/nb/0003_skoleklær_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/05.jpg" /></p>
-<p>Dette beltet er …</p>
+<p>Dette beltet er ...</p>
 <center>
 <strong>4</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/09.jpg" /></p>
-<p>… de passer godt.</p>
+<p>... de passer godt.</p>
 <center>
 <strong>8</strong>
 </center>
