--- a/stories/nb/0134_hvis-jeg-var.html
+++ b/stories/nb/0134_hvis-jeg-var.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hvis jeg var …</title>
+    <title>Hvis jeg var ...</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
