--- a/stories/nb/0201_eselbarnet_slides.html
+++ b/stories/nb/0201_eselbarnet_slides.html
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
-<p>Høyt oppe blant skyene sovnet de. Esel drømte at moren hans var syk og ropte på ham. Og da han våknet …</p>
+<p>Høyt oppe blant skyene sovnet de. Esel drømte at moren hans var syk og ropte på ham. Og da han våknet ...</p>
 <center>
 <strong>16</strong>
 </center>
@@ -241,7 +241,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/18.jpg" /></p>
-<p>… hadde skyene forsvunnet, i likhet med vennen hans, den gamle mannen.</p>
+<p>... hadde skyene forsvunnet, i likhet med vennen hans, den gamle mannen.</p>
 <center>
 <strong>17</strong>
 </center>
