--- a/stories/nn/0006_anansi-og-visdomen_slides.html
+++ b/stories/nn/0006_anansi-og-visdomen_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
-<p>Grådige Anansi tenkte: &quot;Eg gøymer krukka i toppen av eit høgt tre. Sånn kan eg ha han heilt for meg sjølv!&quot; Han spann ein langt tråd, batt han rundt leirkrukka og knytte han om livet. Og byrja å klatra. Men det var vanskelig å klatra i treet med krukka som slo borti knea hans heile tida.</p>
+<p>Grådige Anansi tenkte: &quot;Eg gøymer krukka i toppen av eit høgt tre. Sånn kan eg ha han heilt for meg sjølv!&quot; Han spann ein lang tråd, batt han rundt leirkrukka og knytte han om livet. Og byrja å klatra. Men det var vanskelig å klatra i treet med krukka som slo borti knea hans heile tida.</p>
 <center>
 <strong>3</strong>
 </center>
