--- a/stories/nn/0201_eselbarnet_slides.html
+++ b/stories/nn/0201_eselbarnet_slides.html
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
-<p>Høgt oppe blant skyene sovna dei. Esel drøymde at mor hans var sjuk og ropte på han. Og då han vakna …</p>
+<p>Høgt oppe blant skyene sovna dei. Esel drøymde at mor hans var sjuk og ropte på han. Og då han vakna ...</p>
 <center>
 <strong>16</strong>
 </center>
@@ -241,7 +241,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/18.jpg" /></p>
-<p>… hadde skyene forsvunne, liksom venen hans, den gamle mannen.</p>
+<p>... hadde skyene forsvunne, liksom venen hans, den gamle mannen.</p>
 <center>
 <strong>17</strong>
 </center>
