--- a/stories/nn/0294_bestemors-bananar_slides.html
+++ b/stories/nn/0294_bestemors-bananar_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
-<p>Det var så interessant å sjå på bestemor, bananane, bananblada og den store stråkorga. Men bestemor sende meg av garde til mamma for eit ærend. &quot;Bestemor, ver så snill, la meg få sjå på medan du førebur …&quot; &quot;Ikkje ver så sta, jenta mi, gjer det du har vorte bede om&quot;, insisterte ho. Eg sprang av garde.</p>
+<p>Det var så interessant å sjå på bestemor, bananane, bananblada og den store stråkorga. Men bestemor sende meg av garde til mamma for eit ærend. &quot;Bestemor, ver så snill, la meg få sjå på medan du førebur ...&quot; &quot;Ikkje ver så sta, jenta mi, gjer det du har vorte bede om&quot;, insisterte ho. Eg sprang av garde.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
-<p>Då eg kom tilbake, sat bestemor utanfor, men med verken korga eller bananane. &quot;Bestemor, kor er korga, kor er bananane, og kor …&quot; Men det einaste svaret eg fekk, var: &quot;Dei er på den magiske staden min.&quot; Det var så skuffande!</p>
+<p>Då eg kom tilbake, sat bestemor utanfor, men med verken korga eller bananane. &quot;Bestemor, kor er korga, kor er bananane, og kor ...&quot; Men det einaste svaret eg fekk, var: &quot;Dei er på den magiske staden min.&quot; Det var så skuffande!</p>
 <center>
 <strong>4</strong>
 </center>
