--- a/stories/pl/0052_simbegwire_slides.html
+++ b/stories/pl/0052_simbegwire_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
-<p>Pewnego dnia, ojciec Simbegwire wrócił do domu później niż zwykle. „Gdzie jesteś dziecko?” - zawołał. Simbegwire podbiegła do taty, ale zatrzymała się gdy zobaczyła, że ojciec trzyma za rękę obcą kobietę. „Moje dziecko, chciałbym abyś poznała kogoś wyjątkowego. To jest Anita” - powiedział, uśmiechając się.</p>
+<p>Pewnego dnia, ojciec Simbegwire wrócił do domu później niż zwykle. „Gdzie jesteś dziecko?” – zawołał. Simbegwire podbiegła do taty, ale zatrzymała się gdy zobaczyła, że ojciec trzyma za rękę obcą kobietę. „Moje dziecko, chciałbym abyś poznała kogoś wyjątkowego. To jest Anita” – powiedział, uśmiechając się.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
-<p>„Witaj Simbegwire, Twój tato wiele mi o Tobie opowiadał” - powiedziała Anita. Jednak Anita nie uśmiechnęła się, ani nie podała dziewczynce ręki. Ojciec Simbegwire był bardzo szczęśliwy i podekscytowany. Opowiadał, jak cudownie będzie gdy zamieszkają razem we trójkę. „Moje dziecko, mam nadzieję, że zaakceptujesz Anitę jako swoją matkę” - powiedział.</p>
+<p>„Witaj Simbegwire, Twój tato wiele mi o Tobie opowiadał” – powiedziała Anita. Jednak Anita nie uśmiechnęła się, ani nie podała dziewczynce ręki. Ojciec Simbegwire był bardzo szczęśliwy i podekscytowany. Opowiadał, jak cudownie będzie gdy zamieszkają razem we trójkę. „Moje dziecko, mam nadzieję, że zaakceptujesz Anitę jako swoją matkę” – powiedział.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
-<p>Kilka miesięcy później, ojciec powiedział Simbegwire i Anicie, że ze względu na pracę musi wyjechać na jakiś czas. „Wiem, że będziecie opiekować się sobą nawzajem” - powiedział. Na twarzy Simbegwire pojawiło się rozczarowanie, lecz ojciec tego nie zauważył. Anita nic nie powiedziała, ale również nie była szczęśliwa.</p>
+<p>Kilka miesięcy później, ojciec powiedział Simbegwire i Anicie, że ze względu na pracę musi wyjechać na jakiś czas. „Wiem, że będziecie opiekować się sobą nawzajem” – powiedział. Na twarzy Simbegwire pojawiło się rozczarowanie, lecz ojciec tego nie zauważył. Anita nic nie powiedziała, ale również nie była szczęśliwa.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/08.jpg" /></p>
-<p>Pewnego ranka, dziewczynka zaspała. „Ty leniwa dziewczyno!” - krzyczała Anita, wyciągając ją z łóżka. Bezcenny kocyk zaczepił się o gwóźdź i rozdarł na pół.</p>
+<p>Pewnego ranka, dziewczynka zaspała. „Ty leniwa dziewczyno!” – krzyczała Anita, wyciągając ją z łóżka. Bezcenny kocyk zaczepił się o gwóźdź i rozdarł na pół.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
-<p>Kobieta spojrzała w górę i w koronie drzewa ujrzała dziewczynkę i jej potargany kocyk. „Simbegwire, córeczko mojego brata!” - zapłakała. Inne kobiety przestały prać i pomogły Simbegwire zejść z drzewa. Ciotka przytuliła dziewczynkę i próbowała ją uspokoić.</p>
+<p>Kobieta spojrzała w górę i w koronie drzewa ujrzała dziewczynkę i jej potargany kocyk. „Simbegwire, córeczko mojego brata!” – zapłakała. Inne kobiety przestały prać i pomogły Simbegwire zejść z drzewa. Ciotka przytuliła dziewczynkę i próbowała ją uspokoić.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
-<p>Kiedy ojciec Simbegwire wrócił do domu, zastał pokój dziewczynki pusty. „Co się stało Anito?” - zapytał z ciężkim sercem. Kobieta wytłumaczyła mu, że córka uciekła. „Chciałam aby mnie szanowała”, - odpowiedziała - „ale możliwe, że byłam zbyt surowa.” Ojciec Simbegwire wyszedł z domu i udał się w kierunku strumienia. Potem poszedł do wioski, gdzie mieszkała jego siostra, aby dowiedzieć się czy przypadkiem nie widziała Simbegwire.</p>
+<p>Kiedy ojciec Simbegwire wrócił do domu, zastał pokój dziewczynki pusty. „Co się stało Anito?” – zapytał z ciężkim sercem. Kobieta wytłumaczyła mu, że córka uciekła. „Chciałam aby mnie szanowała”, – odpowiedziała – „ale możliwe, że byłam zbyt surowa.” Ojciec Simbegwire wyszedł z domu i udał się w kierunku strumienia. Potem poszedł do wioski, gdzie mieszkała jego siostra, aby dowiedzieć się czy przypadkiem nie widziała Simbegwire.</p>
 <center>
 <strong>13</strong>
 </center>
