--- a/stories/pl/0072_zemsta-ptaka-miodowoda.html
+++ b/stories/pl/0072_zemsta-ptaka-miodowoda.html
@@ -49,7 +49,7 @@ Zulu folktale<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/02.jpg" /></p>
 
-<p>Oto historia o ptaku Miodowodzie Ngede oraz o chciwym młodym człowieku Gingile. Pewnego dnia Gingile polował, gdy nagle usłyszał śpiew Ngede. Na samą myśl o miodzie Gingile pociekła ślinka. Zatrzymał się i uważnie nasłuchiwał, aż odnalazł ptaka w gałęziach drzewa - tuż nad swoją głową. „Ćwir, ćwir, ćwir” - śpiewał Miodowód i przeskakiwał z jednego drzewa na drugie. Ptak zatrzymywał się od czasu do czasu, aby upewnić się, że Gingile za nim podąża.</p>
+<p>Oto historia o ptaku Miodowodzie Ngede oraz o chciwym młodym człowieku Gingile. Pewnego dnia Gingile polował, gdy nagle usłyszał śpiew Ngede. Na samą myśl o miodzie Gingile pociekła ślinka. Zatrzymał się i uważnie nasłuchiwał, aż odnalazł ptaka w gałęziach drzewa – tuż nad swoją głową. „Ćwir, ćwir, ćwir” – śpiewał Miodowód i przeskakiwał z jednego drzewa na drugie. Ptak zatrzymywał się od czasu do czasu, aby upewnić się, że Gingile za nim podąża.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -98,14 +98,14 @@ Zulu folktale<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/09.jpg" /></p>
 
-<p>Parę tygodni później, Gingile znów usłyszał śpiew Ngede. Przypomniał mu się pyszny miód, więc bez zastanowienia znów wyruszył za śpiewem ptaka. Ngede prowadził Gingile wzdłuż lasu i zatrzymał się na drzewie akacji, aby odpocząć. „Ul musi być właśnie tutaj” - pomyślał Gingile. Szybko rozpalił ognisko, włożył dymiący kijek w zęby i zaczął wspinać się na drzewo. Ptak tylko siedział i przyglądał się.</p>
+<p>Parę tygodni później, Gingile znów usłyszał śpiew Ngede. Przypomniał mu się pyszny miód, więc bez zastanowienia znów wyruszył za śpiewem ptaka. Ngede prowadził Gingile wzdłuż lasu i zatrzymał się na drzewie akacji, aby odpocząć. „Ul musi być właśnie tutaj” – pomyślał Gingile. Szybko rozpalił ognisko, włożył dymiący kijek w zęby i zaczął wspinać się na drzewo. Ptak tylko siedział i przyglądał się.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/10.jpg" /></p>
 
-<p>Gingile wspinał się na drzewo i zastanawiał się dlaczego nie słyszy pszczół. „Może ul jest głęboko w drzewie” - pomyślał. Podciągnął się na gałęzi i znalazł się twarzą w twarz z lampartem! Zwierzę było wściekłe, bo Gingile zbudził go ze snu. Lampart zmrużył oczy i otworzył paszczę pełną dużych i ostrych kłów.</p>
+<p>Gingile wspinał się na drzewo i zastanawiał się dlaczego nie słyszy pszczół. „Może ul jest głęboko w drzewie” – pomyślał. Podciągnął się na gałęzi i znalazł się twarzą w twarz z lampartem! Zwierzę było wściekłe, bo Gingile zbudził go ze snu. Lampart zmrużył oczy i otworzył paszczę pełną dużych i ostrych kłów.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
