--- a/stories/pl/0095_zama-jest-świetna.html
+++ b/stories/pl/0095_zama-jest-świetna.html
@@ -63,7 +63,7 @@ Michael Oguttu<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
 
-<p>„Jesteś moją poranną gwiazdką” - mówi mama.</p>
+<p>„Jesteś moją poranną gwiazdką” – mówi mama.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Michael Oguttu<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
 
-<p>„Nie zapomnij o zębach” - przypomina mi mama. „Ja? Nigdy” - odpowiadam.</p>
+<p>„Nie zapomnij o zębach” – przypomina mi mama. „Ja? Nigdy” – odpowiadam.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Michael Oguttu<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
 
-<p>Potem się ubieram. „Jestem już duża” - mówię do mamy.</p>
+<p>Potem się ubieram. „Jestem już duża” – mówię do mamy.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
