--- a/stories/pl/0158_kura-i-orlica.html
+++ b/stories/pl/0158_kura-i-orlica.html
@@ -63,7 +63,7 @@ Ann Nduku<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
 
-<p>Po dobrze przespanej nocy Kura wpadła na znakomity pomysł. Zaczęła zbierać pióra, które leżały na ziemi. „Pozszywajmy je ze sobą, a potem przyczepmy je do naszych piór” - powiedziała. “Może wtedy będzie nam łatwiej podróżować.”</p>
+<p>Po dobrze przespanej nocy Kura wpadła na znakomity pomysł. Zaczęła zbierać pióra, które leżały na ziemi. „Pozszywajmy je ze sobą, a potem przyczepmy je do naszych piór” – powiedziała. “Może wtedy będzie nam łatwiej podróżować.”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Ann Nduku<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
 
-<p>„Daj mi jeden dzień!” - Kura błagała Orlicę. „Wtedy naprawisz swoje skrzydła i znów polecisz po jedzenie”. Orlica odpowiedziała: „Jeden dzień. Jeżeli nie znajdziesz mojej igły, oddasz mi jedno ze swoich piskląt jako zapłatę.”</p>
+<p>„Daj mi jeden dzień!” – Kura błagała Orlicę. „Wtedy naprawisz swoje skrzydła i znów polecisz po jedzenie”. Orlica odpowiedziała: „Jeden dzień. Jeżeli nie znajdziesz mojej igły, oddasz mi jedno ze swoich piskląt jako zapłatę.”</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
