--- a/stories/pl/0201_ośle-dziecko.html
+++ b/stories/pl/0201_ośle-dziecko.html
@@ -63,7 +63,7 @@ Lindiwe Matshikiza<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
 
-<p>Nieśmiała ale dzielna dziewczynka podeszła bliżej do kobiety. „Zostań z nami. Zaopiekujemy się Tobą i dzieckiem” - powiedzieli ludzie, z którymi była dziewczynka.</p>
+<p>Nieśmiała ale dzielna dziewczynka podeszła bliżej do kobiety. „Zostań z nami. Zaopiekujemy się Tobą i dzieckiem” – powiedzieli ludzie, z którymi była dziewczynka.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Lindiwe Matshikiza<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
 
-<p>Ludzie zaczęli się kłócić: „Obiecaliśmy tej kobiecie i jej dziecku bezpieczeństwo, i tak zrobimy” - mówili jedni. „Przyniosą nam pecha!” - krzyczeli inni.</p>
+<p>Ludzie zaczęli się kłócić: „Obiecaliśmy tej kobiecie i jej dziecku bezpieczeństwo, i tak zrobimy” – mówili jedni. „Przyniosą nam pecha!” – krzyczeli inni.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Lindiwe Matshikiza<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
 
-<p>Kiedy wreszcie się zatrzymał, było już ciemno. „I-o? I-o?” - wyszeptał. „I-o? I-o?” - odpowiedziało echo. Był sam. Zwinął się w kulkę i zapadł w głęboki, niespokojny sen.</p>
+<p>Kiedy wreszcie się zatrzymał, było już ciemno. „I-o? I-o?” – wyszeptał. „I-o? I-o?” – odpowiedziało echo. Był sam. Zwinął się w kulkę i zapadł w głęboki, niespokojny sen.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
