--- a/stories/pl/0262_magozwe.html
+++ b/stories/pl/0262_magozwe.html
@@ -91,7 +91,7 @@ Lesley Koyi<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
 
-<p>Pewnego zimnego dnia Magozwe stał przy drodze i żebrał. Podszedł do niego mężczyzna i powiedział: „Witaj, jestem Thomas. Pracuję niedaleko, w miejscu, gdzie możesz dostać coś do jedzenia”. Wskazał na żółty dom z niebieskim dachem: „Mam nadzieję, że wpadniesz aby coś zjeść?”. Magozwe popatrzył na mężczyznę a potem na dom. „Może” - odparł i odszedł.</p>
+<p>Pewnego zimnego dnia Magozwe stał przy drodze i żebrał. Podszedł do niego mężczyzna i powiedział: „Witaj, jestem Thomas. Pracuję niedaleko, w miejscu, gdzie możesz dostać coś do jedzenia”. Wskazał na żółty dom z niebieskim dachem: „Mam nadzieję, że wpadniesz aby coś zjeść?”. Magozwe popatrzył na mężczyznę a potem na dom. „Może” – odparł i odszedł.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -105,7 +105,7 @@ Lesley Koyi<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
 
-<p>Magozwe siedział na krawężniku i oglądał obrazki w swojej książce, kiedy Thomas się do niego przysiadł. „O czym jest ta historia?” - zapytał. „Jest o chłopcu, który zostaje pilotem”, odpowiedział Magozwe. „Jak ten chłopiec ma na imię?” - dopytywał Thomas. „Nie wiem, nie umiem czytać” - cicho odpowiedział Magozwe.</p>
+<p>Magozwe siedział na krawężniku i oglądał obrazki w swojej książce, kiedy Thomas się do niego przysiadł. „O czym jest ta historia?” – zapytał. „Jest o chłopcu, który zostaje pilotem”, odpowiedział Magozwe. „Jak ten chłopiec ma na imię?” – dopytywał Thomas. „Nie wiem, nie umiem czytać” – cicho odpowiedział Magozwe.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Lesley Koyi<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
 
-<p>Magozwe rozmyślał o nowym miejscu i o szkole. A może wujek miał rację i Magozwe jest zbyt głupi by czegokolwiek się nauczyć? A co, jeśli będą go bili w nowym miejscu? Miał wiele obaw. „Może lepiej jeśli zostanę na ulicy” - pomyślał.</p>
+<p>Magozwe rozmyślał o nowym miejscu i o szkole. A może wujek miał rację i Magozwe jest zbyt głupi by czegokolwiek się nauczyć? A co, jeśli będą go bili w nowym miejscu? Miał wiele obaw. „Może lepiej jeśli zostanę na ulicy” – pomyślał.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
@@ -154,7 +154,7 @@ Lesley Koyi<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/17.jpg" /></p>
 
-<p>Pewnego dnia Magozwe siedział w ogródku domu z zielonym dachem i czytał opowiadanie do szkoły. Thomas podszedł i usiadł obok niego. „O czym jest ta historia?” - zapytał. „Jest o chłopcu, który został nauczycielem” - odpowiedział Magozwe. „Jak on ma na imię?” - zapytał Thomas. „Ma na imię Magozwe” - z uśmiechem odparł Magozwe.</p>
+<p>Pewnego dnia Magozwe siedział w ogródku domu z zielonym dachem i czytał opowiadanie do szkoły. Thomas podszedł i usiadł obok niego. „O czym jest ta historia?” – zapytał. „Jest o chłopcu, który został nauczycielem” – odpowiedział Magozwe. „Jak on ma na imię?” – zapytał Thomas. „Ma na imię Magozwe” – z uśmiechem odparł Magozwe.</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
