--- a/stories/pl/0291_słowa-siostry-vusi_slides.html
+++ b/stories/pl/0291_słowa-siostry-vusi_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/04.jpg" /></p>
-<p>„Coś ty zrobił?” - krzyknął Vusi. „To jajko miało być na tort na ślub mojej siostry. Co powie moja siostra gdy nie będzie tortu?”</p>
+<p>„Coś ty zrobił?” – krzyknął Vusi. „To jajko miało być na tort na ślub mojej siostry. Co powie moja siostra gdy nie będzie tortu?”</p>
 <center>
 <strong>3</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/06.jpg" /></p>
-<p>Po drodze spotkał dwóch mężczyzn, którzy budowali dom. „Czy możemy użyć tego kija?” - zapytał jeden z nich. Kij nie był jednak wystarczająco mocny i złamał się.</p>
+<p>Po drodze spotkał dwóch mężczyzn, którzy budowali dom. „Czy możemy użyć tego kija?” – zapytał jeden z nich. Kij nie był jednak wystarczająco mocny i złamał się.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/07.jpg" /></p>
-<p>„Co zrobiliście?” - krzyknął Vusi. „Ten kij był prezentem dla mojej siostry. Zbieracze owoców dali mi ten kij, bo rozbili jajko na tort. Tort miał być na ślub mojej siostry. A teraz nie mam ani jajka, ani tortu, ani prezentu. Co powie moja siostra?”</p>
+<p>„Co zrobiliście?” – krzyknął Vusi. „Ten kij był prezentem dla mojej siostry. Zbieracze owoców dali mi ten kij, bo rozbili jajko na tort. Tort miał być na ślub mojej siostry. A teraz nie mam ani jajka, ani tortu, ani prezentu. Co powie moja siostra?”</p>
 <center>
 <strong>6</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/09.jpg" /></p>
-<p>Po drodze Vusi spotkał rolnika z krową. „Ta słoma wygląda tak smakowicie, czy mogę skubnąć?” - zapytała krowa. Krowa zjadła całą słomę, bo słoma była bardzo smaczna!</p>
+<p>Po drodze Vusi spotkał rolnika z krową. „Ta słoma wygląda tak smakowicie, czy mogę skubnąć?” – zapytała krowa. Krowa zjadła całą słomę, bo słoma była bardzo smaczna!</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
-<p>„Coś ty zrobiła?” - krzyknął Vusi. „To był prezent dla mojej siostry. Robotnicy dali mi słomę, bo złamali kij od zbieraczy owoców. Zbieracze owoców dali mi kij, bo rozbili jajko na tort na ślub mojej siostry. A teraz nie mam ani jajka, ani tortu, ani prezentu. Co powie moja siostra?”</p>
+<p>„Coś ty zrobiła?” – krzyknął Vusi. „To był prezent dla mojej siostry. Robotnicy dali mi słomę, bo złamali kij od zbieraczy owoców. Zbieracze owoców dali mi kij, bo rozbili jajko na tort na ślub mojej siostry. A teraz nie mam ani jajka, ani tortu, ani prezentu. Co powie moja siostra?”</p>
 <center>
 <strong>9</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/13.jpg" /></p>
-<p>„Co mam teraz zrobić?” - krzyczał Vusi. „Krowa, która uciekła, była prezentem w zamian za słomę od robotników. Robotnicy dali mi słomę, bo złamali kij od zbieraczy owoców. Zbieracze owoców dali mi kij, bo zbili jajko na tort. Tort miał być na ślub. A teraz nie mam ani jajka, ani tortu, ani prezentu.”</p>
+<p>„Co mam teraz zrobić?” – krzyczał Vusi. „Krowa, która uciekła, była prezentem w zamian za słomę od robotników. Robotnicy dali mi słomę, bo złamali kij od zbieraczy owoców. Zbieracze owoców dali mi kij, bo zbili jajko na tort. Tort miał być na ślub. A teraz nie mam ani jajka, ani tortu, ani prezentu.”</p>
 <center>
 <strong>12</strong>
 </center>
