--- a/stories/pl/0302_ogień.html
+++ b/stories/pl/0302_ogień.html
@@ -49,7 +49,7 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>Polski</div><div
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/02.jpg" /></p>
 
-<p>Spójrz - ogień!</p>
+<p>Spójrz – ogień!</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>Polski</div><div
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/07.jpg" /></p>
 
-<p>Spójrz - ogień!</p>
+<p>Spójrz – ogień!</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
