--- a/stories/pl/0302_ogień_slides.html
+++ b/stories/pl/0302_ogień_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/02.jpg" /></p>
-<p>Spójrz - ogień!</p>
+<p>Spójrz – ogień!</p>
 <center>
 <strong>1</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/07.jpg" /></p>
-<p>Spójrz - ogień!</p>
+<p>Spójrz – ogień!</p>
 <center>
 <strong>6</strong>
 </center>
