--- a/stories/pl/0315_piosenka-sakimy_slides.html
+++ b/stories/pl/0315_piosenka-sakimy_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/07.jpg" /></p>
-<p>„Słyszę je w mojej głowie i śpiewam, po prostu przychodzą do mnie” - odpowiedział chłopiec.</p>
+<p>„Słyszę je w mojej głowie i śpiewam, po prostu przychodzą do mnie” – odpowiedział chłopiec.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/09.jpg" /></p>
-<p>„Sakima, czy możesz zaśpiewać tę piosenkę jeszcze raz?” - prosiła. Sakima zgadzał się i śpiewał piosenkę od początku.</p>
+<p>„Sakima, czy możesz zaśpiewać tę piosenkę jeszcze raz?” – prosiła. Sakima zgadzał się i śpiewał piosenkę od początku.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/11.jpg" /></p>
-<p>„Mamo, tato, co się stało?” - zapytał chłopiec. Okazało się, że zaginął syn bogacza. Bogacz był załamany.</p>
+<p>„Mamo, tato, co się stało?” – zapytał chłopiec. Okazało się, że zaginął syn bogacza. Bogacz był załamany.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/12.jpg" /></p>
-<p>„Zaśpiewam dla niego. Może znowu będzie szczęśliwy” - Sakima zaproponował. Rodzicom nie podobał się ten pomysł: „To jest bardzo bogaty człowiek, a ty jesteś tylko niewidomym chłopcem. Naprawdę myślisz, że możesz pomóc bogaczowi?”</p>
+<p>„Zaśpiewam dla niego. Może znowu będzie szczęśliwy” – Sakima zaproponował. Rodzicom nie podobał się ten pomysł: „To jest bardzo bogaty człowiek, a ty jesteś tylko niewidomym chłopcem. Naprawdę myślisz, że możesz pomóc bogaczowi?”</p>
 <center>
 <strong>11</strong>
 </center>
