--- a/stories/pl/0324_dzień-w-którym-opuściłem-dom-i-wyjechałem-do-miasta_slides.html
+++ b/stories/pl/0324_dzień-w-którym-opuściłem-dom-i-wyjechałem-do-miasta_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
-<p>„Centrum! Centrum! Zachód!” - usłyszałem. To był mój autobus.</p>
+<p>„Centrum! Centrum! Zachód!” – usłyszałem. To był mój autobus.</p>
 <center>
 <strong>2</strong>
 </center>
