--- a/stories/yue/0122_我好鍾意睇書.html
+++ b/stories/yue/0122_我好鍾意睇書.html
@@ -91,7 +91,7 @@ Letta Machoga, Bathokwa book club<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0122/08.jpg" /></p>
 
-<p>嗲哋同爺爺一齊整翻架車。</p>
+<p>爹哋同爺爺一齊整翻架車。</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
