--- a/stories/index.html
+++ b/stories/index.html
@@ -2988,6 +2988,12 @@
   </thead>
   <tbody>
     <tr>
+      <td>0003</td>
+      <td><a href="/stories/jam/0003_skuul-kluoz_slides.html" target="_blank">Skuul kluoz</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsWnFwNEtXLW9YckE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="jam0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0008</td>
       <td><a href="/stories/jam/0008_wa-unu-a-du_slides.html" target="_blank">Wa unu a du?</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsWnFwNEtXLW9YckE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2995,15 +3001,57 @@
     </tr>
     <tr>
       <td>0009</td>
-      <td><a href="/stories/jam/0009_we-di-pus-de_slides.html" target="_blank">We di pus de?</a></td>
+      <td><a href="/stories/jam/0009_we-mi-kyat-de_slides.html" target="_blank">We mi kyat de?</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsWnFwNEtXLW9YckE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="jam0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0067</td>
+      <td><a href="/stories/jam/0067_a-kuk_slides.html" target="_blank">A kuk</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsWnFwNEtXLW9YckE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="jam0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0087</td>
+      <td><a href="/stories/jam/0087_mi-laik-fi-riid_slides.html" target="_blank">Mi laik fi riid!</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsWnFwNEtXLW9YckE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="jam0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0112</td>
+      <td><a href="/stories/jam/0112_mi-badi_slides.html" target="_blank">Mi badi.</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsWnFwNEtXLW9YckE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="jam0112"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0129</td>
+      <td><a href="/stories/jam/0129_liezi-likl-breda_slides.html" target="_blank">Liezi likl breda</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsWnFwNEtXLW9YckE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="jam0129"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0231</td>
+      <td><a href="/stories/jam/0231_weda-buk_slides.html" target="_blank">Weda buk</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsWnFwNEtXLW9YckE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="jam0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0253</td>
       <td><a href="/stories/jam/0253_mi-picha-buk_slides.html" target="_blank">Mi picha buk</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsWnFwNEtXLW9YckE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="jam0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0271</td>
+      <td><a href="/stories/jam/0271_tuu_slides.html" target="_blank">Tuu</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsWnFwNEtXLW9YckE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="jam0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0302</td>
+      <td><a href="/stories/jam/0302_faiya_slides.html" target="_blank">Faiya</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsWnFwNEtXLW9YckE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="jam0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -6721,7 +6769,7 @@
       <td>0003</td>
       <td><a href="http://africanstorybook.org/stories/school-clothes">School clothes</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0003">ar</a>, <a href="#bn0003">bn</a>, <a href="#da0003">da</a>, <a href="#de0003">de</a>, <a href="#eo0003">eo</a>, <a href="#es0003">es</a>, <a href="#fa0003">fa</a>, <a href="#gu0003">gu</a>, <a href="#hi0003">hi</a>, <a href="#hu0003">hu</a>, <a href="#it0003">it</a>, <a href="#ja0003">ja</a>, <a href="#ko0003">ko</a>, <a href="#nb0003">nb</a>, <a href="#nl0003">nl</a>, <a href="#nn0003">nn</a>, <a href="#pa0003">pa</a>, <a href="#pl0003">pl</a>, <a href="#ru0003">ru</a>, <a href="#tl0003">tl</a>, <a href="#tr0003">tr</a>, <a href="#ur0003">ur</a>, <a href="#vi0003">vi</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
+      <td><a href="#ar0003">ar</a>, <a href="#bn0003">bn</a>, <a href="#da0003">da</a>, <a href="#de0003">de</a>, <a href="#eo0003">eo</a>, <a href="#es0003">es</a>, <a href="#fa0003">fa</a>, <a href="#gu0003">gu</a>, <a href="#hi0003">hi</a>, <a href="#hu0003">hu</a>, <a href="#it0003">it</a>, <a href="#ja0003">ja</a>, <a href="#jam0003">jam</a>, <a href="#ko0003">ko</a>, <a href="#nb0003">nb</a>, <a href="#nl0003">nl</a>, <a href="#nn0003">nn</a>, <a href="#pa0003">pa</a>, <a href="#pl0003">pl</a>, <a href="#ru0003">ru</a>, <a href="#tl0003">tl</a>, <a href="#tr0003">tr</a>, <a href="#ur0003">ur</a>, <a href="#vi0003">vi</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
     </tr>
     <tr>
       <td>0004</td>
@@ -6829,7 +6877,7 @@
       <td>0067</td>
       <td><a href="http://africanstorybook.org/stories/cooking">Cooking</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0067">ar</a>, <a href="#bn0067">bn</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#hu0067">hu</a>, <a href="#it0067">it</a>, <a href="#ja0067">ja</a>, <a href="#ko0067">ko</a>, <a href="#nb0067">nb</a>, <a href="#nl0067">nl</a>, <a href="#nn0067">nn</a>, <a href="#pa0067">pa</a>, <a href="#pl0067">pl</a>, <a href="#ru0067">ru</a>, <a href="#tl0067">tl</a>, <a href="#tr0067">tr</a>, <a href="#ur0067">ur</a>, <a href="#vi0067">vi</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
+      <td><a href="#ar0067">ar</a>, <a href="#bn0067">bn</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#hu0067">hu</a>, <a href="#it0067">it</a>, <a href="#ja0067">ja</a>, <a href="#jam0067">jam</a>, <a href="#ko0067">ko</a>, <a href="#nb0067">nb</a>, <a href="#nl0067">nl</a>, <a href="#nn0067">nn</a>, <a href="#pa0067">pa</a>, <a href="#pl0067">pl</a>, <a href="#ru0067">ru</a>, <a href="#tl0067">tl</a>, <a href="#tr0067">tr</a>, <a href="#ur0067">ur</a>, <a href="#vi0067">vi</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
     </tr>
     <tr>
       <td>0068</td>
@@ -6871,7 +6919,7 @@
       <td>0087</td>
       <td><a href="http://africanstorybook.org/stories/i-read">I like to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0087">ar</a>, <a href="#bn0087">bn</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#hu0087">hu</a>, <a href="#it0087">it</a>, <a href="#ja0087">ja</a>, <a href="#ko0087">ko</a>, <a href="#nb0087">nb</a>, <a href="#nn0087">nn</a>, <a href="#pa0087">pa</a>, <a href="#pl0087">pl</a>, <a href="#ro0087">ro</a>, <a href="#ru0087">ru</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#tr0087">tr</a>, <a href="#ur0087">ur</a>, <a href="#yue0087">yue</a>, <a href="#zh0087">zh</a></td>
+      <td><a href="#ar0087">ar</a>, <a href="#bn0087">bn</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#hu0087">hu</a>, <a href="#it0087">it</a>, <a href="#ja0087">ja</a>, <a href="#jam0087">jam</a>, <a href="#ko0087">ko</a>, <a href="#nb0087">nb</a>, <a href="#nn0087">nn</a>, <a href="#pa0087">pa</a>, <a href="#pl0087">pl</a>, <a href="#ro0087">ro</a>, <a href="#ru0087">ru</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#tr0087">tr</a>, <a href="#ur0087">ur</a>, <a href="#yue0087">yue</a>, <a href="#zh0087">zh</a></td>
     </tr>
     <tr>
       <td>0089</td>
@@ -6931,7 +6979,7 @@
       <td>0112</td>
       <td><a href="http://africanstorybook.org/stories/my-body">My body</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0112">aeb</a>, <a href="#ar0112">ar</a>, <a href="#bn0112">bn</a>, <a href="#de0112">de</a>, <a href="#eo0112">eo</a>, <a href="#es0112">es</a>, <a href="#fa0112">fa</a>, <a href="#gu0112">gu</a>, <a href="#hu0112">hu</a>, <a href="#it0112">it</a>, <a href="#ja0112">ja</a>, <a href="#ko0112">ko</a>, <a href="#nb0112">nb</a>, <a href="#nl0112">nl</a>, <a href="#nn0112">nn</a>, <a href="#pa0112">pa</a>, <a href="#pl0112">pl</a>, <a href="#tl0112">tl</a>, <a href="#tr0112">tr</a>, <a href="#ur0112">ur</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
+      <td><a href="#aeb0112">aeb</a>, <a href="#ar0112">ar</a>, <a href="#bn0112">bn</a>, <a href="#de0112">de</a>, <a href="#eo0112">eo</a>, <a href="#es0112">es</a>, <a href="#fa0112">fa</a>, <a href="#gu0112">gu</a>, <a href="#hu0112">hu</a>, <a href="#it0112">it</a>, <a href="#ja0112">ja</a>, <a href="#jam0112">jam</a>, <a href="#ko0112">ko</a>, <a href="#nb0112">nb</a>, <a href="#nl0112">nl</a>, <a href="#nn0112">nn</a>, <a href="#pa0112">pa</a>, <a href="#pl0112">pl</a>, <a href="#tl0112">tl</a>, <a href="#tr0112">tr</a>, <a href="#ur0112">ur</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
     </tr>
     <tr>
       <td>0120</td>
@@ -6973,7 +7021,7 @@
       <td>0129</td>
       <td><a href="http://africanstorybook.org/stories/lazy-little-brother">Lazy little brother</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0129">ar</a>, <a href="#bn0129">bn</a>, <a href="#de0129">de</a>, <a href="#es0129">es</a>, <a href="#fa0129">fa</a>, <a href="#gu0129">gu</a>, <a href="#hi0129">hi</a>, <a href="#hu0129">hu</a>, <a href="#it0129">it</a>, <a href="#ja0129">ja</a>, <a href="#ko0129">ko</a>, <a href="#nb0129">nb</a>, <a href="#nl0129">nl</a>, <a href="#nn0129">nn</a>, <a href="#pa0129">pa</a>, <a href="#pl0129">pl</a>, <a href="#tl0129">tl</a>, <a href="#tr0129">tr</a>, <a href="#ur0129">ur</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
+      <td><a href="#ar0129">ar</a>, <a href="#bn0129">bn</a>, <a href="#de0129">de</a>, <a href="#es0129">es</a>, <a href="#fa0129">fa</a>, <a href="#gu0129">gu</a>, <a href="#hi0129">hi</a>, <a href="#hu0129">hu</a>, <a href="#it0129">it</a>, <a href="#ja0129">ja</a>, <a href="#jam0129">jam</a>, <a href="#ko0129">ko</a>, <a href="#nb0129">nb</a>, <a href="#nl0129">nl</a>, <a href="#nn0129">nn</a>, <a href="#pa0129">pa</a>, <a href="#pl0129">pl</a>, <a href="#tl0129">tl</a>, <a href="#tr0129">tr</a>, <a href="#ur0129">ur</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
     </tr>
     <tr>
       <td>0130</td>
@@ -7129,7 +7177,7 @@
       <td>0231</td>
       <td><a href="http://africanstorybook.org/stories/weather-book">Weather book</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0231">ar</a>, <a href="#bn0231">bn</a>, <a href="#de0231">de</a>, <a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#hu0231">hu</a>, <a href="#it0231">it</a>, <a href="#ja0231">ja</a>, <a href="#ko0231">ko</a>, <a href="#nb0231">nb</a>, <a href="#nl0231">nl</a>, <a href="#nn0231">nn</a>, <a href="#pa0231">pa</a>, <a href="#pl0231">pl</a>, <a href="#tl0231">tl</a>, <a href="#tr0231">tr</a>, <a href="#ur0231">ur</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
+      <td><a href="#ar0231">ar</a>, <a href="#bn0231">bn</a>, <a href="#de0231">de</a>, <a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#hu0231">hu</a>, <a href="#it0231">it</a>, <a href="#ja0231">ja</a>, <a href="#jam0231">jam</a>, <a href="#ko0231">ko</a>, <a href="#nb0231">nb</a>, <a href="#nl0231">nl</a>, <a href="#nn0231">nn</a>, <a href="#pa0231">pa</a>, <a href="#pl0231">pl</a>, <a href="#tl0231">tl</a>, <a href="#tr0231">tr</a>, <a href="#ur0231">ur</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
     </tr>
     <tr>
       <td>0234</td>
@@ -7177,7 +7225,7 @@
       <td>0271</td>
       <td><a href="http://africanstorybook.org/stories/two">Two</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0271">ar</a>, <a href="#bn0271">bn</a>, <a href="#de0271">de</a>, <a href="#es0271">es</a>, <a href="#fa0271">fa</a>, <a href="#gu0271">gu</a>, <a href="#hu0271">hu</a>, <a href="#it0271">it</a>, <a href="#ja0271">ja</a>, <a href="#ko0271">ko</a>, <a href="#nb0271">nb</a>, <a href="#nl0271">nl</a>, <a href="#nn0271">nn</a>, <a href="#pa0271">pa</a>, <a href="#pl0271">pl</a>, <a href="#sv0271">sv</a>, <a href="#tl0271">tl</a>, <a href="#tr0271">tr</a>, <a href="#ur0271">ur</a>, <a href="#vi0271">vi</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
+      <td><a href="#ar0271">ar</a>, <a href="#bn0271">bn</a>, <a href="#de0271">de</a>, <a href="#es0271">es</a>, <a href="#fa0271">fa</a>, <a href="#gu0271">gu</a>, <a href="#hu0271">hu</a>, <a href="#it0271">it</a>, <a href="#ja0271">ja</a>, <a href="#jam0271">jam</a>, <a href="#ko0271">ko</a>, <a href="#nb0271">nb</a>, <a href="#nl0271">nl</a>, <a href="#nn0271">nn</a>, <a href="#pa0271">pa</a>, <a href="#pl0271">pl</a>, <a href="#sv0271">sv</a>, <a href="#tl0271">tl</a>, <a href="#tr0271">tr</a>, <a href="#ur0271">ur</a>, <a href="#vi0271">vi</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
     </tr>
     <tr>
       <td>0277</td>
@@ -7219,7 +7267,7 @@
       <td>0302</td>
       <td><a href="http://africanstorybook.org/stories/fire">Fire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0302">ar</a>, <a href="#bn0302">bn</a>, <a href="#de0302">de</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#hu0302">hu</a>, <a href="#it0302">it</a>, <a href="#ja0302">ja</a>, <a href="#ko0302">ko</a>, <a href="#nb0302">nb</a>, <a href="#nl0302">nl</a>, <a href="#nn0302">nn</a>, <a href="#pa0302">pa</a>, <a href="#pl0302">pl</a>, <a href="#tl0302">tl</a>, <a href="#tr0302">tr</a>, <a href="#ur0302">ur</a>, <a href="#yue0302">yue</a>, <a href="#zh0302">zh</a></td>
+      <td><a href="#ar0302">ar</a>, <a href="#bn0302">bn</a>, <a href="#de0302">de</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#hu0302">hu</a>, <a href="#it0302">it</a>, <a href="#ja0302">ja</a>, <a href="#jam0302">jam</a>, <a href="#ko0302">ko</a>, <a href="#nb0302">nb</a>, <a href="#nl0302">nl</a>, <a href="#nn0302">nn</a>, <a href="#pa0302">pa</a>, <a href="#pl0302">pl</a>, <a href="#tl0302">tl</a>, <a href="#tr0302">tr</a>, <a href="#ur0302">ur</a>, <a href="#yue0302">yue</a>, <a href="#zh0302">zh</a></td>
     </tr>
     <tr>
       <td>0306</td>
