--- a/stories/nb/0006_anansi-og-visdommen.html
+++ b/stories/nb/0006_anansi-og-visdommen.html
@@ -63,7 +63,7 @@ Ghanaian folktale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
 
-<p>Grådige Anansi tenkte: “Jeg gjemmer krukka i toppen av et høyt tre. Sånn kan jeg ha den helt for meg selv!” Han spant en langt tråd, bandt den rundt leirkrukka og knyttet den om livet. Og begynte å klatre. Men det var vanskelig å klatre i treet med krukka som slo borti knærne hans hele tiden.</p>
+<p>Grådige Anansi tenkte: “Jeg gjemmer krukka i toppen av et høyt tre. Sånn kan jeg ha den helt for meg selv!” Han spant en lang tråd, bandt den rundt leirkrukka og knyttet den om livet. Og begynte å klatre. Men det var vanskelig å klatre i treet med krukka som slo borti knærne hans hele tiden.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
