--- a/stories/nb/0006_anansi-og-visdommen_slides.html
+++ b/stories/nb/0006_anansi-og-visdommen_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
-<p>Grådige Anansi tenkte: &quot;Jeg gjemmer krukka i toppen av et høyt tre. Sånn kan jeg ha den helt for meg selv!&quot; Han spant en langt tråd, bandt den rundt leirkrukka og knyttet den om livet. Og begynte å klatre. Men det var vanskelig å klatre i treet med krukka som slo borti knærne hans hele tiden.</p>
+<p>Grådige Anansi tenkte: &quot;Jeg gjemmer krukka i toppen av et høyt tre. Sånn kan jeg ha den helt for meg selv!&quot; Han spant en lang tråd, bandt den rundt leirkrukka og knyttet den om livet. Og begynte å klatre. Men det var vanskelig å klatre i treet med krukka som slo borti knærne hans hele tiden.</p>
 <center>
 <strong>3</strong>
 </center>
