--- a/stories/nb/0129_late-lillebror_slides.html
+++ b/stories/nb/0129_late-lillebror_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/08.jpg" /></p>
-<p>Hvorfor jobber jeg så hardt … … når broren min bare leker?</p>
+<p>Hvorfor jobber jeg så hardt ... ... når broren min bare leker?</p>
 <center>
 <strong>7</strong>
 </center>
