--- a/stories/nb/0134_hvis-jeg-var_slides.html
+++ b/stories/nb/0134_hvis-jeg-var_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Hvis jeg var … - Global African Storybook</title>
+  <title>Hvis jeg var ... - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-<section id="hvis-jeg-var" class="slide level1">
-<h1>Hvis jeg var …</h1>
+<section id="hvis-jeg-var-..." class="slide level1">
+<h1>Hvis jeg var ...</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0134/01.jpg" />
 </center>
@@ -195,7 +195,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="hvis-jeg-var-1">Hvis jeg var …</h2>
+<h2 id="hvis-jeg-var-...-1">Hvis jeg var ...</h2>
 <strong>Text:</strong> Seruwooza Shafic, Mutaawe Frank, Namuddu Patricia, Mwibonere Bwiza Sara, Namugambe Mariam, Ritah Katetemera, Milly Kasule, Fatma Baracka, Annet Ssebagalla, John Emongot<br> <strong>Illustrations:</strong> Jano Strydom, Cathy Feek, Laura Libertore, Marleen Visser, Rob Owen, Natalie Propa, Karen Lilje, Benjamin Mitchley, Wiehan de Jager, Alice Toich, Rebecca Riley<br> <strong>Translation:</strong> Espen Stranger-Johannessen<br> <strong>Language:</strong> Norwegian<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
