--- a/stories/nb/0156_den-sultne-krokodillen_slides.html
+++ b/stories/nb/0156_den-sultne-krokodillen_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/03.jpg" /></p>
-<p>Han lette etter mat sakte og lydløst. Og så …</p>
+<p>Han lette etter mat sakte og lydløst. Og så ...</p>
 <center>
 <strong>2</strong>
 </center>
