--- a/stories/nb/0294_bestemors-bananer_slides.html
+++ b/stories/nb/0294_bestemors-bananer_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
-<p>Det var så interessant å se på bestemor, bananene, bananbladene og den store stråkurven. Men bestemor sendte meg av gårde til mamma for et ærend. &quot;Bestemor, vær så snill, la meg få se på mens du forbereder …&quot; &quot;Ikke vær så sta, jenta mi, gjør det du har blitt bedt om&quot;, insisterte hun. Jeg sprang av gårde.</p>
+<p>Det var så interessant å se på bestemor, bananene, bananbladene og den store stråkurven. Men bestemor sendte meg av gårde til mamma for et ærend. &quot;Bestemor, vær så snill, la meg få se på mens du forbereder ...&quot; &quot;Ikke vær så sta, jenta mi, gjør det du har blitt bedt om&quot;, insisterte hun. Jeg sprang av gårde.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
-<p>Da jeg kom tilbake, satt bestemor utenfor, men med verken kurven eller bananene. &quot;Bestemor, hvor er kurven, hvor er bananene, og hvor …&quot; Men det eneste svaret jeg fikk, var: &quot;De er på det magiske stedet mitt.&quot; Det var så skuffende!</p>
+<p>Da jeg kom tilbake, satt bestemor utenfor, men med verken kurven eller bananene. &quot;Bestemor, hvor er kurven, hvor er bananene, og hvor ...&quot; Men det eneste svaret jeg fikk, var: &quot;De er på det magiske stedet mitt.&quot; Det var så skuffende!</p>
 <center>
 <strong>4</strong>
 </center>
