--- a/stories/nn/0156_den-svoltne-krokodilla_slides.html
+++ b/stories/nn/0156_den-svoltne-krokodilla_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/03.jpg" /></p>
-<p>Ho leitte etter mat sakte og lydlaust. Og så …</p>
+<p>Ho leitte etter mat sakte og lydlaust. Og så ...</p>
 <center>
 <strong>2</strong>
 </center>
