--- a/stories/pl/0066_nozibele-i-jej-trzy-włosy_slides.html
+++ b/stories/pl/0066_nozibele-i-jej-trzy-włosy_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
-<p>Kiedy były już prawie w domu, Nozibele dotknęła ręką swojej szyi. Okazało się, że zapomniała naszyjnika! “Proszę, wróćcie ze mną!” - błagała swoje koleżanki. Niestety, obie dziewczynki uznały, że było już zbyt późno.</p>
+<p>Kiedy były już prawie w domu, Nozibele dotknęła ręką swojej szyi. Okazało się, że zapomniała naszyjnika! “Proszę, wróćcie ze mną!” – błagała swoje koleżanki. Niestety, obie dziewczynki uznały, że było już zbyt późno.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
-<p>Ku jej zdziwieniu, drzwi otworzył pies: „Czego chcesz?” - zapytał. „Zgubiłam się i muszę gdzieś przenocować” - odpowiedziała Nozibele. „Wejdź, bo jak nie, to będę gryzł!” Nozibele posłusznie weszła do środka.</p>
+<p>Ku jej zdziwieniu, drzwi otworzył pies: „Czego chcesz?” – zapytał. „Zgubiłam się i muszę gdzieś przenocować” – odpowiedziała Nozibele. „Wejdź, bo jak nie, to będę gryzł!” Nozibele posłusznie weszła do środka.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
-<p>„Ugotuj dla mnie!” - rozkazał pies. „Ale ja nigdy nie gotowałam dla psa” - odpowiedziała dziewczynka. „Gotuj, bo jak nie, to będę gryzł!” Więc Nozibele ugotowała jedzenie dla psa.</p>
+<p>„Ugotuj dla mnie!” – rozkazał pies. „Ale ja nigdy nie gotowałam dla psa” – odpowiedziała dziewczynka. „Gotuj, bo jak nie, to będę gryzł!” Więc Nozibele ugotowała jedzenie dla psa.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
-<p>„Pościel moje łóżko!” - rozkazał pies. „Nigdy nie słałam łóżka dla psa” - odpowiedziała Nozibele. „Pościel łóżko, bo jak nie, to będę gryzł!” Więc Nozibele posłała łóżko psa.</p>
+<p>„Pościel moje łóżko!” – rozkazał pies. „Nigdy nie słałam łóżka dla psa” – odpowiedziała Nozibele. „Pościel łóżko, bo jak nie, to będę gryzł!” Więc Nozibele posłała łóżko psa.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
-<p>Pies wrócił do domu i zaczął szukać dziewczynki: „Nozibele, gdzie jesteś?” - wołał. „Jestem tutaj, pod łóżkiem” - odpowiedział pierwszy włos. „Jestem tutaj, za drzwiami” - powiedział drugi włos. „Jestem tutaj w płocie” - odpowiedział trzeci włos.</p>
+<p>Pies wrócił do domu i zaczął szukać dziewczynki: „Nozibele, gdzie jesteś?” – wołał. „Jestem tutaj, pod łóżkiem” – odpowiedział pierwszy włos. „Jestem tutaj, za drzwiami” – powiedział drugi włos. „Jestem tutaj w płocie” – odpowiedział trzeci włos.</p>
 <center>
 <strong>12</strong>
 </center>
