--- a/stories/pl/0072_zemsta-ptaka-miodowoda_slides.html
+++ b/stories/pl/0072_zemsta-ptaka-miodowoda_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/02.jpg" /></p>
-<p>Oto historia o ptaku Miodowodzie Ngede oraz o chciwym młodym człowieku Gingile. Pewnego dnia Gingile polował, gdy nagle usłyszał śpiew Ngede. Na samą myśl o miodzie Gingile pociekła ślinka. Zatrzymał się i uważnie nasłuchiwał, aż odnalazł ptaka w gałęziach drzewa - tuż nad swoją głową. „Ćwir, ćwir, ćwir” - śpiewał Miodowód i przeskakiwał z jednego drzewa na drugie. Ptak zatrzymywał się od czasu do czasu, aby upewnić się, że Gingile za nim podąża.</p>
+<p>Oto historia o ptaku Miodowodzie Ngede oraz o chciwym młodym człowieku Gingile. Pewnego dnia Gingile polował, gdy nagle usłyszał śpiew Ngede. Na samą myśl o miodzie Gingile pociekła ślinka. Zatrzymał się i uważnie nasłuchiwał, aż odnalazł ptaka w gałęziach drzewa – tuż nad swoją głową. „Ćwir, ćwir, ćwir” – śpiewał Miodowód i przeskakiwał z jednego drzewa na drugie. Ptak zatrzymywał się od czasu do czasu, aby upewnić się, że Gingile za nim podąża.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/09.jpg" /></p>
-<p>Parę tygodni później, Gingile znów usłyszał śpiew Ngede. Przypomniał mu się pyszny miód, więc bez zastanowienia znów wyruszył za śpiewem ptaka. Ngede prowadził Gingile wzdłuż lasu i zatrzymał się na drzewie akacji, aby odpocząć. „Ul musi być właśnie tutaj” - pomyślał Gingile. Szybko rozpalił ognisko, włożył dymiący kijek w zęby i zaczął wspinać się na drzewo. Ptak tylko siedział i przyglądał się.</p>
+<p>Parę tygodni później, Gingile znów usłyszał śpiew Ngede. Przypomniał mu się pyszny miód, więc bez zastanowienia znów wyruszył za śpiewem ptaka. Ngede prowadził Gingile wzdłuż lasu i zatrzymał się na drzewie akacji, aby odpocząć. „Ul musi być właśnie tutaj” – pomyślał Gingile. Szybko rozpalił ognisko, włożył dymiący kijek w zęby i zaczął wspinać się na drzewo. Ptak tylko siedział i przyglądał się.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/10.jpg" /></p>
-<p>Gingile wspinał się na drzewo i zastanawiał się dlaczego nie słyszy pszczół. „Może ul jest głęboko w drzewie” - pomyślał. Podciągnął się na gałęzi i znalazł się twarzą w twarz z lampartem! Zwierzę było wściekłe, bo Gingile zbudził go ze snu. Lampart zmrużył oczy i otworzył paszczę pełną dużych i ostrych kłów.</p>
+<p>Gingile wspinał się na drzewo i zastanawiał się dlaczego nie słyszy pszczół. „Może ul jest głęboko w drzewie” – pomyślał. Podciągnął się na gałęzi i znalazł się twarzą w twarz z lampartem! Zwierzę było wściekłe, bo Gingile zbudził go ze snu. Lampart zmrużył oczy i otworzył paszczę pełną dużych i ostrych kłów.</p>
 <center>
 <strong>9</strong>
 </center>
