--- a/stories/pl/0089_khalai-rozmawia-z-roślinami.html
+++ b/stories/pl/0089_khalai-rozmawia-z-roślinami.html
@@ -98,7 +98,7 @@ Ursula Nafula<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
 
-<p>„Pomarańcze są nadal zielone” - wzdycha dziewczynka. „Do zobaczenia jutro” - mówi Khalai. „Może jutro podarujesz mi dojrzałe i soczyste owoce”.</p>
+<p>„Pomarańcze są nadal zielone” – wzdycha dziewczynka. „Do zobaczenia jutro” – mówi Khalai. „Może jutro podarujesz mi dojrzałe i soczyste owoce”.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
