--- a/stories/pl/0089_khalai-rozmawia-z-roślinami_slides.html
+++ b/stories/pl/0089_khalai-rozmawia-z-roślinami_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
-<p>„Pomarańcze są nadal zielone” - wzdycha dziewczynka. „Do zobaczenia jutro” - mówi Khalai. „Może jutro podarujesz mi dojrzałe i soczyste owoce”.</p>
+<p>„Pomarańcze są nadal zielone” – wzdycha dziewczynka. „Do zobaczenia jutro” – mówi Khalai. „Może jutro podarujesz mi dojrzałe i soczyste owoce”.</p>
 <center>
 <strong>8</strong>
 </center>
