--- a/stories/pl/0095_zama-jest-świetna_slides.html
+++ b/stories/pl/0095_zama-jest-świetna_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
-<p>„Jesteś moją poranną gwiazdką” - mówi mama.</p>
+<p>„Jesteś moją poranną gwiazdką” – mówi mama.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
-<p>„Nie zapomnij o zębach” - przypomina mi mama. „Ja? Nigdy” - odpowiadam.</p>
+<p>„Nie zapomnij o zębach” – przypomina mi mama. „Ja? Nigdy” – odpowiadam.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
-<p>Potem się ubieram. „Jestem już duża” - mówię do mamy.</p>
+<p>Potem się ubieram. „Jestem już duża” – mówię do mamy.</p>
 <center>
 <strong>8</strong>
 </center>
