--- a/stories/pl/0111_dlaczego-hipopotamy-nie-mają-włosów_slides.html
+++ b/stories/pl/0111_dlaczego-hipopotamy-nie-mają-włosów_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
-<p>„Bardzo cię przepraszam” - rzekł Hipcio, „Nie widziałem cię, proszę przebacz mi!”. Ale Zając nie chciał tego słuchać i krzyczał na Hipcia: „Zrobiłeś to specjalnie! Kiedyś za to zapłacisz, zobaczysz!”</p>
+<p>„Bardzo cię przepraszam” – rzekł Hipcio, „Nie widziałem cię, proszę przebacz mi!”. Ale Zając nie chciał tego słuchać i krzyczał na Hipcia: „Zrobiłeś to specjalnie! Kiedyś za to zapłacisz, zobaczysz!”</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
-<p>Zając poszedł poprosić Ogień o pomoc: “Hipcio na mnie stanął!” „Spal Hipcia, gdy wyjdzie z wody, aby zjeść trawę”. „Nie ma problemu przyjacielu, zrobię jak chcesz” - odparł Ogień.</p>
+<p>Zając poszedł poprosić Ogień o pomoc: “Hipcio na mnie stanął!” „Spal Hipcia, gdy wyjdzie z wody, aby zjeść trawę”. „Nie ma problemu przyjacielu, zrobię jak chcesz” – odparł Ogień.</p>
 <center>
 <strong>5</strong>
 </center>
