--- a/stories/pl/0158_kura-i-orlica_slides.html
+++ b/stories/pl/0158_kura-i-orlica_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p>Po dobrze przespanej nocy Kura wpadła na znakomity pomysł. Zaczęła zbierać pióra, które leżały na ziemi. „Pozszywajmy je ze sobą, a potem przyczepmy je do naszych piór” - powiedziała. “Może wtedy będzie nam łatwiej podróżować.”</p>
+<p>Po dobrze przespanej nocy Kura wpadła na znakomity pomysł. Zaczęła zbierać pióra, które leżały na ziemi. „Pozszywajmy je ze sobą, a potem przyczepmy je do naszych piór” – powiedziała. “Może wtedy będzie nam łatwiej podróżować.”</p>
 <center>
 <strong>3</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
-<p>„Daj mi jeden dzień!” - Kura błagała Orlicę. „Wtedy naprawisz swoje skrzydła i znów polecisz po jedzenie”. Orlica odpowiedziała: „Jeden dzień. Jeżeli nie znajdziesz mojej igły, oddasz mi jedno ze swoich piskląt jako zapłatę.”</p>
+<p>„Daj mi jeden dzień!” – Kura błagała Orlicę. „Wtedy naprawisz swoje skrzydła i znów polecisz po jedzenie”. Orlica odpowiedziała: „Jeden dzień. Jeżeli nie znajdziesz mojej igły, oddasz mi jedno ze swoich piskląt jako zapłatę.”</p>
 <center>
 <strong>8</strong>
 </center>
