--- a/stories/pl/0201_ośle-dziecko_slides.html
+++ b/stories/pl/0201_ośle-dziecko_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
-<p>Nieśmiała ale dzielna dziewczynka podeszła bliżej do kobiety. „Zostań z nami. Zaopiekujemy się Tobą i dzieckiem” - powiedzieli ludzie, z którymi była dziewczynka.</p>
+<p>Nieśmiała ale dzielna dziewczynka podeszła bliżej do kobiety. „Zostań z nami. Zaopiekujemy się Tobą i dzieckiem” – powiedzieli ludzie, z którymi była dziewczynka.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
-<p>Ludzie zaczęli się kłócić: „Obiecaliśmy tej kobiecie i jej dziecku bezpieczeństwo, i tak zrobimy” - mówili jedni. „Przyniosą nam pecha!” - krzyczeli inni.</p>
+<p>Ludzie zaczęli się kłócić: „Obiecaliśmy tej kobiecie i jej dziecku bezpieczeństwo, i tak zrobimy” – mówili jedni. „Przyniosą nam pecha!” – krzyczeli inni.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
-<p>Kiedy wreszcie się zatrzymał, było już ciemno. „I-o? I-o?” - wyszeptał. „I-o? I-o?” - odpowiedziało echo. Był sam. Zwinął się w kulkę i zapadł w głęboki, niespokojny sen.</p>
+<p>Kiedy wreszcie się zatrzymał, było już ciemno. „I-o? I-o?” – wyszeptał. „I-o? I-o?” – odpowiedziało echo. Był sam. Zwinął się w kulkę i zapadł w głęboki, niespokojny sen.</p>
 <center>
 <strong>12</strong>
 </center>
