--- a/stories/pl/0294_babcine-banany_slides.html
+++ b/stories/pl/0294_babcine-banany_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
-<p>Obserwowanie babci z bananami, z liśćmi i z dużym słomianym koszem było interesujące. Ale babcia wysłała mnie do mamy. „Babciu, proszę pozwól mi patrzeć jak przygotowujesz…” „Nie bądź uparta dziecko, zrób jak mówię” - nalegała babcia. Postanowiłam biec.</p>
+<p>Obserwowanie babci z bananami, z liśćmi i z dużym słomianym koszem było interesujące. Ale babcia wysłała mnie do mamy. „Babciu, proszę pozwól mi patrzeć jak przygotowujesz…” „Nie bądź uparta dziecko, zrób jak mówię” – nalegała babcia. Postanowiłam biec.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
-<p>Przestraszyłam się głosu babci gdy zawołała: „Co tam robisz? Pospiesz się i przynieś mi laskę”. Posłusznie przyniosłam babci laskę. „Dlaczego się tak uśmiechasz?” - zapytała babcia. To pytanie uświadomiło mi, że uśmiechałam się, bo odkryłam jej magiczne miejsce.</p>
+<p>Przestraszyłam się głosu babci gdy zawołała: „Co tam robisz? Pospiesz się i przynieś mi laskę”. Posłusznie przyniosłam babci laskę. „Dlaczego się tak uśmiechasz?” – zapytała babcia. To pytanie uświadomiło mi, że uśmiechałam się, bo odkryłam jej magiczne miejsce.</p>
 <center>
 <strong>6</strong>
 </center>
