--- a/stories/pl/0315_piosenka-sakimy.html
+++ b/stories/pl/0315_piosenka-sakimy.html
@@ -84,7 +84,7 @@ Ursula Nafula<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/07.jpg" /></p>
 
-<p>„Słyszę je w mojej głowie i śpiewam, po prostu przychodzą do mnie” - odpowiedział chłopiec.</p>
+<p>„Słyszę je w mojej głowie i śpiewam, po prostu przychodzą do mnie” – odpowiedział chłopiec.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Ursula Nafula<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/09.jpg" /></p>
 
-<p>„Sakima, czy możesz zaśpiewać tę piosenkę jeszcze raz?” - prosiła. Sakima zgadzał się i śpiewał piosenkę od początku.</p>
+<p>„Sakima, czy możesz zaśpiewać tę piosenkę jeszcze raz?” – prosiła. Sakima zgadzał się i śpiewał piosenkę od początku.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -112,14 +112,14 @@ Ursula Nafula<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/11.jpg" /></p>
 
-<p>„Mamo, tato, co się stało?” - zapytał chłopiec. Okazało się, że zaginął syn bogacza. Bogacz był załamany.</p>
+<p>„Mamo, tato, co się stało?” – zapytał chłopiec. Okazało się, że zaginął syn bogacza. Bogacz był załamany.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/12.jpg" /></p>
 
-<p>„Zaśpiewam dla niego. Może znowu będzie szczęśliwy” - Sakima zaproponował. Rodzicom nie podobał się ten pomysł: „To jest bardzo bogaty człowiek, a ty jesteś tylko niewidomym chłopcem. Naprawdę myślisz, że możesz pomóc bogaczowi?”</p>
+<p>„Zaśpiewam dla niego. Może znowu będzie szczęśliwy” – Sakima zaproponował. Rodzicom nie podobał się ten pomysł: „To jest bardzo bogaty człowiek, a ty jesteś tylko niewidomym chłopcem. Naprawdę myślisz, że możesz pomóc bogaczowi?”</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
