--- a/stories/pl/0324_dzień-w-którym-opuściłem-dom-i-wyjechałem-do-miasta.html
+++ b/stories/pl/0324_dzień-w-którym-opuściłem-dom-i-wyjechałem-do-miasta.html
@@ -56,7 +56,7 @@ Lesley Koyi, Ursula Nafula<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
 
-<p>„Centrum! Centrum! Zachód!” - usłyszałem. To był mój autobus.</p>
+<p>„Centrum! Centrum! Zachód!” – usłyszałem. To był mój autobus.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
