--- a/stories/pl/0342_kara.html
+++ b/stories/pl/0342_kara.html
@@ -56,7 +56,7 @@ Adelheid Marie Bwire<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
 
-<p>„Kiedy możemy zjeść te owoce?” - pytamy. „Będziemy jeść owoce wieczorem” - odpowiada mama.</p>
+<p>„Kiedy możemy zjeść te owoce?” – pytamy. „Będziemy jeść owoce wieczorem” – odpowiada mama.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -70,7 +70,7 @@ Adelheid Marie Bwire<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
 
-<p>„Spójrz co zrobił Rahim!” - krzyczy mój młodszy braciszek. „Rahim jest niegrzeczny i samolubny” - przyznaję.</p>
+<p>„Spójrz co zrobił Rahim!” – krzyczy mój młodszy braciszek. „Rahim jest niegrzeczny i samolubny” – przyznaję.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -91,14 +91,14 @@ Adelheid Marie Bwire<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
 
-<p>„Czy nie ukarzesz Rahima?” - pyta mój młodszy braciszek.</p>
+<p>„Czy nie ukarzesz Rahima?” – pyta mój młodszy braciszek.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
 
-<p>„Rahim, już niedługo spotka Cię kara” - ostrzega go mama.</p>
+<p>„Rahim, już niedługo spotka Cię kara” – ostrzega go mama.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Adelheid Marie Bwire<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
 
-<p>„Bardzo boli mnie brzuch” - szepcze Rahim.</p>
+<p>„Bardzo boli mnie brzuch” – szepcze Rahim.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Adelheid Marie Bwire<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
 
-<p>Rahim postanawia nas przeprosić. „Już nigdy nie będę taki samolubny” - obiecuje. Wszyscy mu wierzymy.</p>
+<p>Rahim postanawia nas przeprosić. „Już nigdy nie będę taki samolubny” – obiecuje. Wszyscy mu wierzymy.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
