--- a/stories/pl/0342_kara_slides.html
+++ b/stories/pl/0342_kara_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
-<p>„Kiedy możemy zjeść te owoce?” - pytamy. „Będziemy jeść owoce wieczorem” - odpowiada mama.</p>
+<p>„Kiedy możemy zjeść te owoce?” – pytamy. „Będziemy jeść owoce wieczorem” – odpowiada mama.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
-<p>„Spójrz co zrobił Rahim!” - krzyczy mój młodszy braciszek. „Rahim jest niegrzeczny i samolubny” - przyznaję.</p>
+<p>„Spójrz co zrobił Rahim!” – krzyczy mój młodszy braciszek. „Rahim jest niegrzeczny i samolubny” – przyznaję.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
-<p>„Czy nie ukarzesz Rahima?” - pyta mój młodszy braciszek.</p>
+<p>„Czy nie ukarzesz Rahima?” – pyta mój młodszy braciszek.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
-<p>„Rahim, już niedługo spotka Cię kara” - ostrzega go mama.</p>
+<p>„Rahim, już niedługo spotka Cię kara” – ostrzega go mama.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
-<p>„Bardzo boli mnie brzuch” - szepcze Rahim.</p>
+<p>„Bardzo boli mnie brzuch” – szepcze Rahim.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
-<p>Rahim postanawia nas przeprosić. „Już nigdy nie będę taki samolubny” - obiecuje. Wszyscy mu wierzymy.</p>
+<p>Rahim postanawia nas przeprosić. „Już nigdy nie będę taki samolubny” – obiecuje. Wszyscy mu wierzymy.</p>
 <center>
 <strong>12</strong>
 </center>
