--- a/stories/yue/0122_我好鍾意睇書_slides.html
+++ b/stories/yue/0122_我好鍾意睇書_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0122/08.jpg" /></p>
-<p>嗲哋同爺爺一齊整翻架車。</p>
+<p>爹哋同爺爺一齊整翻架車。</p>
 <center>
 <strong>7</strong>
 </center>
